--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "blade-ui-kit/blade-heroicons": "^2.3",
         "blade-ui-kit/blade-ui-kit": "^0.5.1",
         "guzzlehttp/guzzle": "^7.2",
+        "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
