--- a/.env
+++ b/.env
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=admin.m365@bakrieoleo.com
+MAIL_PASSWORD=str4t0redp@KT
+MAIL_ENCRYPTION=starttls
+MAIL_FROM_ADDRESS="admin.m365@bakrieoleo.com"
+MAIL_FROM_NAME="BRC Mail Service"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
