install reminder email

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -28,12 +28,21 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.office365.com
+# MAIL_PORT=587
+# MAIL_USERNAME=admin.m365@bakrieoleo.com
+# MAIL_PASSWORD=str4t0redp@KT
+# MAIL_ENCRYPTION=starttls
+# MAIL_FROM_ADDRESS="admin.m365@bakrieoleo.com"
+# MAIL_FROM_NAME="BRC Mail Service"
+
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.office365.com
-MAIL_PORT=587
-MAIL_USERNAME=admin.m365@bakrieoleo.com
-MAIL_PASSWORD=str4t0redp@KT
-MAIL_ENCRYPTION=starttls
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=1134093935ebfb
+MAIL_PASSWORD=df14f9c163cf07
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="admin.m365@bakrieoleo.com"
 MAIL_FROM_NAME="BRC Mail Service"
 
