--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "blade-ui-kit/blade-heroicons": "^2.3",
         "blade-ui-kit/blade-ui-kit": "^0.5.1",
+        "dasundev/livewire-dropzone": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^10.0",
