--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.2.15
 DB_PORT=3306
-DB_DATABASE=db_wo_system
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sandbox_alat_industri
+DB_USERNAME=Ahmad
+DB_PASSWORD=str4t0redp
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
